unpackaged/main/default/objects/Dossier_de_soins__c/Dossier_de_soins__c.object-meta.xml
<CustomObject>
    <label>Dossier de soins</label>
    <nameField>
        <displayFormat>DS-{00000000}</displayFormat>
        <label>Dossier de soins Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dossiers de soins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>