unpackaged/main/default/objects/Dossier_de_soins__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers de soins</relationshipLabel>
    <relationshipName>Dossiers_de_soins</relationshipName>
    <type>Lookup</type>
</CustomField>