unpackaged/main/default/objects/Dossier_de_soins__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Patient__c</columns>
    <columns>Statut__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>