unpackaged/main/default/objects/Dossier_de_soins__c/listViews/Dossiers_de_Soins_de_Test.listView-meta.xml
<ListView>
    <fullName>Dossiers_de_Soins_de_Test</fullName>
    <columns>Patient__c</columns>
    <columns>Statut__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Patient__c</field>
        <operation>contains</operation>
        <value>test</value>
    </filters>
    <label>Dossiers de Soins de Test</label>
</ListView>